pathfinder/tests/i18n/Tests/bad-001.xq
(: This file is UTF-8 encoded.  Be careful when editing this file! :)
xquery version '1.0' encoding 'utf-8';

(: the × symbol is not a valid Letter :)
doc('i18n.xml')/×
